# ConwaysTerminalOfLife

./: Cargo.toml  README.md
src/: conway.rs  main.rs
