[package]
name = "terminal-of-life"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = { version = "0.29.0", features = ["events"], default-features = false }
rand = { version = "0.9.0", features = ["thread_rng"], default-features = false }

[profile.release]
opt-level = "z"
strip = true
# lto = true
